--- a/HTMLs/anchor_href_target.html
+++ b/HTMLs/anchor_href_target.html
@@ -11,3 +11,10 @@
 <a href="intro_title_favicon.html">
     <h1>HTML Intro Page</h1>
 </a>
+
+<!-- 
+download Attribute: Instructs the browser to download the file.
+href Attribute: Specifies the file URL.
+-->
+
+<a href="UCme.gif" download="JohnCena_UCMe.gif" target="_blank">Download John Cena GIF</a>
