--- a/HTMLs/list_containertag_ol_li_ul_break_button_div.html
+++ b/HTMLs/list_containertag_ol_li_ul_break_button_div.html
@@ -54,3 +54,71 @@
 <p>This is the first line.<br>This is the second line.</p>
 
 <button>WWE NETWORK</button>
+
+<!-- List Types -->
+
+<h2>List Types Examples</h2>
+
+<h3>Ordered List Types</h3>
+<ol type="1">
+    <li>WrestleMania Main Events</li>
+    <li>SummerSlam Champions</li>
+</ol>
+<ol type="A">
+    <li>Top WWE Brands</li>
+    <li>RAW</li>
+    <li>SmackDown</li>
+</ol>
+<ol type="a">
+    <li>Hall of Famers</li>
+    <li>Hulk Hogan</li>
+    <li>Stone Cold Steve Austin</li>
+</ol>
+<ol type="I">
+    <li>Greatest Wrestlers of All Time</li>
+    <li>John Cena</li>
+    <li>Roman Reigns</li>
+</ol>
+<ol type="i">
+    <li>Best Pay-Per-Views</li>
+    <li>Royal Rumble</li>
+    <li>Survivor Series</li>
+</ol>
+
+<h3>Unordered List Types</h3>
+<ul style="list-style-type: disc;">
+    <li>Roman Reigns - The Tribal Chief</li>
+    <li>Charlotte Flair - The Queen</li>
+</ul>
+<ul style="list-style-type: circle;">
+    <li>Undertaker - The Phenom</li>
+    <li>Edge - The Rated R Superstar</li>
+</ul>
+<ul style="list-style-type: square;">
+    <li>Becky Lynch - The Man</li>
+    <li>Ronda Rousey - The Baddest Woman on the Planet</li>
+</ul>
+<ul style="list-style-type: none;">
+    <li>John Cena - Hustle, Loyalty, Respect</li>
+    <li>Triple H - The Game</li>
+</ul>
+
+<h2>WWE Wrestlers and Their Nicknames</h2>
+<dl>
+    <dt>Roman Reigns</dt>
+    <dd>The Tribal Chief</dd>
+
+    <dt>John Cena</dt>
+    <dd>The Champ, You Can't See Me</dd>
+
+    <dt>Undertaker</dt>
+    <dd>The Deadman, The Phenom</dd>
+
+    <dt>Becky Lynch</dt>
+    <dd>The Man</dd>
+</dl>
+<!--
+<dl>: Stands for "Definition List", used for a list of terms and their descriptions.
+<dt>: Defines the term.
+<dd>: Provides the description of the term.
+ -->
