--- a/HTMLs/tailwind_begin/index.html
+++ b/HTMLs/tailwind_begin/index.html
@@ -46,9 +46,10 @@ Intro to Tailwind CSS:
 
 <body class="bg-gray-100 font-sans">
     <!-- Header Section -->
-    <header class="bg-blue-600 text-white text-center py-4">
+    <header class="bg-blue-600 text-white text-center py-4"> <!-- Padding y-axis -->
         <h1 class="text-4xl font-bold">Learning Tailwind CSS</h1>
-        <p class="text-lg">An Introduction to Utility-First CSS</p>
+        <p class="text-lg">An Introduction to Utility-First CSS</p> <!-- Large screen breakpoint
+        , 1024px, and text size(18px) -->
     </header>
 
     <!-- Main Content Section -->
