--- a/HTMLs/tailwind_begin/CSS_pp_1.html
+++ b/HTMLs/tailwind_begin/CSS_pp_1.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- svg image setup 
+1) go to heroicons
+2) search the designated image
+3) copy svg 
+-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
