--- a/HTMLs/tailwind_begin/CSS_grid_responsive.html
+++ b/HTMLs/tailwind_begin/CSS_grid_responsive.html
@@ -36,9 +36,9 @@
         <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
             <div class="bg-blue-500 text-white text-center p-4">Item 1</div>
             <div class="bg-green-500 text-white text-center p-4">Item 2</div>
-            <div class="bg-purple-500 text-white text-center p-4">Item 3</div>
+            <div class="bg-purple-500 text-white text-center row-span-2 p-4">Item 3</div>
             <div class="bg-orange-500 text-white text-center p-4">Item 4</div>
-            <div class="bg-red-500 text-white text-center p-4 lg:col-span-2">Item 5</div>
+            <div class="bg-red-500 text-white text-center p-4 col-span-3">Item 5</div>
         </div>
         <!-- 
             Notes:
