--- a/HTMLs/test.html
+++ b/HTMLs/test.html
@@ -1,97 +1,136 @@
-<!-- 
-CSS Grid Overview:
-   - The `grid-area` property defines where an item is placed in a grid.
-   - It can be used in two ways:
-       - **Naming Areas**: Assigns a name to grid items for use with `grid-template-areas`.
-       - **Shorthand Placement**: Specifies row and column start and end lines.
-   - **Syntax**:
-       - `grid-area: row-start / column-start / row-end / column-end;`
-       - Example: `grid-area: 1 / 2 / 3 / 4;`
-   - **Naming Areas**:
-       - Works with `grid-template-areas` to visually structure layouts.
-       - Example:
-         ```
-         grid-template-areas:
-           "header header"
-           "sidebar main"
-           "footer footer";
-         ```
-         Assign grid items using `grid-area: header;` or similar.
-   - **Shorthand Placement**:
-       - Allows precise placement using row and column line numbers.
-
-   - **Advantages**:
-       - Simplifies layout creation.
-       - Improves code readability and reduces repetition.
--->
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Layout with grid-area</title>
-    <style>
-        /* Grid container */
-        .container {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            /* 4 equal columns */
-            grid-template-rows: repeat(3, 100px) 50px 50px;
-            /* 3 rows of 100px and 2 rows of 50px */
-            gap: 10px;
-        }
-
-        /* Naming grid areas */
-        .header {
-            grid-area: header;
-            background-color: #aaa;
-        }
-
-        .sidebar {
-            grid-area: sidebar;
-            background-color: #bbb;
-        }
-
-        .main {
-            grid-area: main;
-            background-color: #ccc;
-        }
-
-        .footer {
-            grid-area: footer;
-            background-color: #ddd;
-        }
-
-        /* Explicit placement */
-        .box-1 {
-            grid-area: 1 / 1 / 3 / 3;
-            /* Row 1 to 3, Column 1 to 3 */
-            background-color: #e67e22;
-        }
-
-        .box-2 {
-            grid-area: 2 / 3 / 4 / 5;
-            /* Row 2 to 4, Column 3 to 5 */
-            background-color: #3498db;
-        }
-    </style>
-</head>
-
-<body>
-    <!-- Grid container -->
-    <div class="container">
-        <!-- Named areas -->
-        <div class="header">Header</div>
-        <div class="sidebar">Sidebar</div>
-        <div class="main">Main Content</div>
-        <div class="footer">Footer</div>
-
-        <!-- Explicitly placed boxes -->
-        <div class="box-1">Box 1</div>
-        <div class="box-2">Box 2</div>
+<div class="bg-white rounded-xl p-4 flex items-center h-full">
+    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
+    <div class="flex-grow">
+        <div class="flex items-center mb-1">
+            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
+            <span class="text-xs">4.5</span>
+        </div>
+        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
+        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
+        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
+            Shop Now
+            <i class="fas fa-arrow-right ml-1 text-xs"></i>
+        </a>
     </div>
-</body>
+</div>
 
-</html>
+<div class="bg-white rounded-xl p-4 flex items-center h-full">
+    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
+    <div class="flex-grow">
+        <div class="flex items-center mb-1">
+            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
+            <span class="text-xs">4.5</span>
+        </div>
+        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
+        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
+        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
+            Shop Now
+            <i class="fas fa-arrow-right ml-1 text-xs"></i>
+        </a>
+    </div>
+</div>
+<div class="bg-white rounded-xl p-4 flex items-center h-full">
+    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
+    <div class="flex-grow">
+        <div class="flex items-center mb-1">
+            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
+            <span class="text-xs">4.5</span>
+        </div>
+        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
+        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
+        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
+            Shop Now
+            <i class="fas fa-arrow-right ml-1 text-xs"></i>
+        </a>
+    </div>
+</div>
+<div class="bg-white rounded-xl p-4 flex items-center h-full">
+    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
+    <div class="flex-grow">
+        <div class="flex items-center mb-1">
+            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
+            <span class="text-xs">4.5</span>
+        </div>
+        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
+        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
+        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
+            Shop Now
+            <i class="fas fa-arrow-right ml-1 text-xs"></i>
+        </a>
+    </div>
+</div>
+<div class="bg-white rounded-xl p-4 flex items-center h-full">
+    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
+    <div class="flex-grow">
+        <div class="flex items-center mb-1">
+            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
+            <span class="text-xs">4.5</span>
+        </div>
+        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
+        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
+        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
+            Shop Now
+            <i class="fas fa-arrow-right ml-1 text-xs"></i>
+        </a>
+    </div>
+</div>
+<div class="bg-white rounded-xl p-4 flex items-center h-full">
+    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
+    <div class="flex-grow">
+        <div class="flex items-center mb-1">
+            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
+            <span class="text-xs">4.5</span>
+        </div>
+        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
+        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
+        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
+            Shop Now
+            <i class="fas fa-arrow-right ml-1 text-xs"></i>
+        </a>
+    </div>
+</div>
+<div class="bg-white rounded-xl p-4 flex items-center h-full">
+    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
+    <div class="flex-grow">
+        <div class="flex items-center mb-1">
+            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
+            <span class="text-xs">4.5</span>
+        </div>
+        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
+        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
+        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
+            Shop Now
+            <i class="fas fa-arrow-right ml-1 text-xs"></i>
+        </a>
+    </div>
+</div>
+<div class="bg-white rounded-xl p-4 flex items-center h-full">
+    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
+    <div class="flex-grow">
+        <div class="flex items-center mb-1">
+            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
+            <span class="text-xs">4.5</span>
+        </div>
+        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
+        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
+        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
+            Shop Now
+            <i class="fas fa-arrow-right ml-1 text-xs"></i>
+        </a>
+    </div>
+</div>
+<div class="bg-white rounded-xl p-4 flex items-center h-full">
+    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
+    <div class="flex-grow">
+        <div class="flex items-center mb-1">
+            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
+            <span class="text-xs">4.5</span>
+        </div>
+        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
+        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
+        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
+            Shop Now
+            <i class="fas fa-arrow-right ml-1 text-xs"></i>
+        </a>
+    </div>
+</div>
