--- a/HTMLs/test.html
+++ b/HTMLs/test.html
@@ -1,136 +1,213 @@
-<div class="bg-white rounded-xl p-4 flex items-center h-full">
-    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
-    <div class="flex-grow">
-        <div class="flex items-center mb-1">
-            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
-            <span class="text-xs">4.5</span>
-        </div>
-        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
-        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
-        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
-            Shop Now
-            <i class="fas fa-arrow-right ml-1 text-xs"></i>
-        </a>
-    </div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Football Game</title>
+  <style>
+    body {
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f4f4f4;
+      font-family: Arial, sans-serif;
+      flex-direction: column;
+    }
 
-<div class="bg-white rounded-xl p-4 flex items-center h-full">
-    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
-    <div class="flex-grow">
-        <div class="flex items-center mb-1">
-            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
-            <span class="text-xs">4.5</span>
-        </div>
-        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
-        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
-        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
-            Shop Now
-            <i class="fas fa-arrow-right ml-1 text-xs"></i>
-        </a>
-    </div>
-</div>
-<div class="bg-white rounded-xl p-4 flex items-center h-full">
-    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
-    <div class="flex-grow">
-        <div class="flex items-center mb-1">
-            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
-            <span class="text-xs">4.5</span>
-        </div>
-        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
-        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
-        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
-            Shop Now
-            <i class="fas fa-arrow-right ml-1 text-xs"></i>
-        </a>
-    </div>
-</div>
-<div class="bg-white rounded-xl p-4 flex items-center h-full">
-    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
-    <div class="flex-grow">
-        <div class="flex items-center mb-1">
-            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
-            <span class="text-xs">4.5</span>
-        </div>
-        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
-        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
-        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
-            Shop Now
-            <i class="fas fa-arrow-right ml-1 text-xs"></i>
-        </a>
-    </div>
-</div>
-<div class="bg-white rounded-xl p-4 flex items-center h-full">
-    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
-    <div class="flex-grow">
-        <div class="flex items-center mb-1">
-            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
-            <span class="text-xs">4.5</span>
-        </div>
-        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
-        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
-        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
-            Shop Now
-            <i class="fas fa-arrow-right ml-1 text-xs"></i>
-        </a>
-    </div>
-</div>
-<div class="bg-white rounded-xl p-4 flex items-center h-full">
-    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
-    <div class="flex-grow">
-        <div class="flex items-center mb-1">
-            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
-            <span class="text-xs">4.5</span>
-        </div>
-        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
-        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
-        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
-            Shop Now
-            <i class="fas fa-arrow-right ml-1 text-xs"></i>
-        </a>
-    </div>
-</div>
-<div class="bg-white rounded-xl p-4 flex items-center h-full">
-    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
-    <div class="flex-grow">
-        <div class="flex items-center mb-1">
-            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
-            <span class="text-xs">4.5</span>
-        </div>
-        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
-        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
-        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
-            Shop Now
-            <i class="fas fa-arrow-right ml-1 text-xs"></i>
-        </a>
-    </div>
-</div>
-<div class="bg-white rounded-xl p-4 flex items-center h-full">
-    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
-    <div class="flex-grow">
-        <div class="flex items-center mb-1">
-            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
-            <span class="text-xs">4.5</span>
-        </div>
-        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
-        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
-        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
-            Shop Now
-            <i class="fas fa-arrow-right ml-1 text-xs"></i>
-        </a>
-    </div>
-</div>
-<div class="bg-white rounded-xl p-4 flex items-center h-full">
-    <div class="w-20 h-20 bg-gray-100 rounded-xl mr-3"></div>
-    <div class="flex-grow">
-        <div class="flex items-center mb-1">
-            <i class="fas fa-star text-yellow-400 text-xs mr-1"></i>
-            <span class="text-xs">4.5</span>
-        </div>
-        <h4 class="font-semibold text-base mb-1">Pet Bed</h4>
-        <p class="text-gray-600 text-lg font-medium mb-2">$39.99</p>
-        <a href="#" class="text-ylw font-medium text-sm hover:text-yellow-500 flex items-center">
-            Shop Now
-            <i class="fas fa-arrow-right ml-1 text-xs"></i>
-        </a>
-    </div>
-</div>
+    canvas {
+      background-color: #008000;
+      border: 2px solid #444;
+      display: block;
+    }
+
+    .game-info {
+      font-size: 18px;
+      color: #333;
+      margin-top: 10px;
+      text-align: center;
+    }
+
+    .game-info span {
+      color: #fff;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <canvas id="gameCanvas" width="600" height="400"></canvas>
+  <div class="game-info">
+    <p>Press <span>Space</span> to Start / Restart</p>
+    <p>Use <span>WASD</span> to Move, <span>Space</span> to Kick</p>
+  </div>
+
+  <script>
+    const canvas = document.getElementById('gameCanvas');
+    const ctx = canvas.getContext('2d');
+
+    const player = {
+      x: 50,
+      y: canvas.height / 2 - 15,
+      width: 30,
+      height: 30,
+      color: 'blue',
+      speed: 5,
+      dx: 0,
+      dy: 0
+    };
+
+    const ball = {
+      x: canvas.width / 2 - 10,
+      y: canvas.height / 2 - 10,
+      radius: 10,
+      color: 'white',
+      speed: 3,
+      dx: 0,
+      dy: 0
+    };
+
+    const goal = {
+      x: canvas.width - 50,
+      y: canvas.height / 2 - 50,
+      width: 30,
+      height: 100
+    };
+
+    let score = 0;
+    let isGameOver = false;
+    let gameInterval;
+
+    // Draw everything
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      // Draw goal
+      ctx.fillStyle = 'yellow';
+      ctx.fillRect(goal.x, goal.y, goal.width, goal.height);
+
+      // Draw player
+      ctx.fillStyle = player.color;
+      ctx.fillRect(player.x, player.y, player.width, player.height);
+
+      // Draw ball
+      ctx.beginPath();
+      ctx.arc(ball.x, ball.y, ball.radius, 0, Math.PI * 2);
+      ctx.fillStyle = ball.color;
+      ctx.fill();
+      ctx.closePath();
+
+      // Draw score
+      ctx.fillStyle = '#fff';
+      ctx.font = '16px Arial';
+      ctx.fillText('Score: ' + score, 10, 20);
+    }
+
+    // Move player
+    function movePlayer() {
+      player.x += player.dx;
+      player.y += player.dy;
+
+      // Boundaries check
+      if (player.x < 0) player.x = 0;
+      if (player.x + player.width > canvas.width) player.x = canvas.width - player.width;
+      if (player.y < 0) player.y = 0;
+      if (player.y + player.height > canvas.height) player.y = canvas.height - player.height;
+    }
+
+    // Move ball
+    function moveBall() {
+      ball.x += ball.dx;
+      ball.y += ball.dy;
+
+      // Boundary check for ball
+      if (ball.x - ball.radius < 0) {
+        ball.x = canvas.width / 2 - 10;
+        ball.y = canvas.height / 2 - 10;
+        ball.dx = 0;
+        ball.dy = 0;
+      }
+
+      if (ball.y - ball.radius < 0 || ball.y + ball.radius > canvas.height) {
+        ball.dy *= -1;
+      }
+
+      // Check if ball goes into goal
+      if (ball.x + ball.radius > goal.x && ball.x - ball.radius < goal.x + goal.width &&
+        ball.y + ball.radius > goal.y && ball.y - ball.radius < goal.y + goal.height) {
+        score += 1;
+        resetBall();
+      }
+    }
+
+    // Reset ball after scoring
+    function resetBall() {
+      ball.x = canvas.width / 2 - 10;
+      ball.y = canvas.height / 2 - 10;
+      ball.dx = 0;
+      ball.dy = 0;
+    }
+
+    // Start the game
+    function startGame() {
+      isGameOver = false;
+      score = 0;
+      player.x = 50;
+      player.y = canvas.height / 2 - 15;
+      ball.x = canvas.width / 2 - 10;
+      ball.y = canvas.height / 2 - 10;
+      ball.dx = 0;
+      ball.dy = 0;
+      clearInterval(gameInterval);
+      gameInterval = setInterval(update, 1000 / 60);
+      draw();
+    }
+
+    // Update game state
+    function update() {
+      if (isGameOver) {
+        clearInterval(gameInterval);
+        ctx.fillStyle = '#fff';
+        ctx.font = '30px Arial';
+        ctx.fillText('Game Over', canvas.width / 4, canvas.height / 2);
+        return;
+      }
+
+      movePlayer();
+      moveBall();
+      draw();
+    }
+
+    // Control player movement
+    function changeDirection(event) {
+      if (event.key === 'w') player.dy = -player.speed;
+      if (event.key === 's') player.dy = player.speed;
+      if (event.key === 'a') player.dx = -player.speed;
+      if (event.key === 'd') player.dx = player.speed;
+      if (event.key === ' ') kickBall();
+    }
+
+    // Kick ball in direction of player
+    function kickBall() {
+      if (ball.dx === 0 && ball.dy === 0) {
+        ball.dx = player.x < canvas.width / 2 ? ball.speed : -ball.speed;
+        ball.dy = Math.random() < 0.5 ? -ball.speed : ball.speed;
+      }
+    }
+
+    // Handle spacebar and WASD key input
+    document.addEventListener('keydown', function(event) {
+      if (event.key === ' ' && !isGameOver) {
+        return; // Ignore spacebar if the game is not over
+      } else if (event.key === ' ' && isGameOver) {
+        startGame(); // Restart game
+      }
+
+      changeDirection(event);
+    });
+
+    // Start the game for the first time
+    startGame();
+  </script>
+</body>
+</html>
