--- a/HTMLs/Dom1.html
+++ b/HTMLs/Dom1.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,6 +7,8 @@
     <link rel="stylesheet" href="styles/dom.css">
     <!-- DEFER JS LOADING AFTER HTML PARSE -->
     <script src="JAVASCRIPT/dom_getElements.js" defer></script>
+    <!-- if we add another link of JS here, that JS file will have full access to this JS file. and will be able to access every functionalities included in this JS -->
+    <!-- and for adding "defer", now each JS file can access each other -->
     <title>DOMination</title>
 </head>
 
