--- a/HTMLs/DOM_querySelector.html
+++ b/HTMLs/DOM_querySelector.html
@@ -118,6 +118,9 @@
              for (const item of nodeList) {
                  item.style.backgroundColor = 'red';
              }
+
+
+             A GREAT example will be found at ASS5 task.js file
         */
     </script>
 </body>
