--- a/HTMLs/test.html
+++ b/HTMLs/test.html
@@ -64,8 +64,13 @@ console.log(bowlerCard.ability); // "hi hi huii + bowlerrr, bye bye"
 Try to do the notes properly while describing properly without negligence.And,
     ONLY on those topics that I will ask you to do, no extra shits.
 
-        SO, I started learning ES6.
+        SO, I started learning local storage.
+
 Now a really intelligent and hitting in the brain note needed on
+about local storage 
+ 
+
+
 
 
 Be precise and short but effective as hell.don't use emojis and cringe headings before starting any topic in the note. Give proper explanations and stories. strictly saying
